Fix some spacing and width issues

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -124,7 +124,7 @@ html, body {
   }
 
   #description {
-    max-width: 540px;
+    max-width: 520px;
     padding-right: 20%;
     top: 16%;
   }
@@ -155,7 +155,7 @@ html, body {
 
   #description {
     left: 10%;
-    max-width: 540px;
+    max-width: 520px;
     padding-right: 20%;
     top: 16%;
   }
